--- a/Python_zaklady/Python_basics.ipynb
+++ b/Python_zaklady/Python_basics.ipynb
@@ -11,13 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nemáš dost dlouhé jméno, protože -fs- není jméno\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "jjmeno = input(\"Zadej jméno\")\n",
     "# tohle tam nedávej - type(jjmeno)\n",
@@ -29,20 +33,24 @@
     "if delka == 0:\n",
     "  print (\"jméno nezadáno\")\n",
     "elif delka < 5:\n",
-    "  print (\"nemáš dost dlouhé jméno\")\n",
+    "  print (f\"nemáš dost dlouhé jméno, protože -{jjmeno}- není jméno\")\n",
     "else:\n",
     "  print (f\"Ok, díky. Vaše zadané jméno je: {jjmeno}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "print(\"Test\")"
    ]
@@ -50,18 +58,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
