--- a/Python_zaklady/Python_basics.ipynb
+++ b/Python_zaklady/Python_basics.ipynb
@@ -57,10 +57,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Praha', 'Brno', 'Jihlava', 'Ostrava', 'Plzeň']\n",
+      "['Brno', 'Jihlava', 'Ostrava', 'Plzeň', 'Praha', 'Písek', 'Vyškov']\n",
+      "['Jihlava', 'Plzeň', 'Písek']\n"
+     ]
+    }
+   ],
+   "source": [
+    "mesta = [\"Praha\", \"Brno\", \"Jihlava\", \"Ostrava\", \"Plzeň\"]\n",
+    "\n",
+    "\"Karviná\" in mesta\n",
+    "\n",
+    "print(mesta)\n",
+    "mesta.sort()\n",
+    "\n",
+    "mesta.extend([\"Písek\",\"Vyškov\"])\n",
+    "\n",
+    "print(mesta)\n",
+    "print(mesta[1::2])"
+   ]
   }
  ],
  "metadata": {
